# plot

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
install/include/: QtGnuplotWidget.h  settingsWidget.h  ui_QtGnuplotSettings.h  ui_settingsWidget.h
install/lib/: plotView.lib  plotView_d.lib
plotView/: CMakeLists.txt  QtGnuplotInstance.cpp  QtGnuplotInstance.h  QtGnuplotScene.cpp  QtGnuplotWidget.cpp  QtGnuplotWindow.cpp  QtGnuplotWindow.h  export.h  settingsWidget.cpp  settingsWidget.h  settingsWidget.ui
